[gd_scene load_steps=6 format=3 uid="uid://enemy_scene"]

[ext_resource type="Script" path="res://entities/enemy.gd" id="1"]
[ext_resource type="Script" path="res://components/movement_component.gd" id="2"]
[ext_resource type="Script" path="res://components/health_component.gd" id="3"]
[ext_resource type="Script" path="res://components/attack_component.gd" id="4"]
[ext_resource type="Script" path="res://components/ai_component.gd" id="5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(20, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 30.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1")

[node name="Visual" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 0.3, 0.3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2")
speed = 80.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3")
max_health = 50

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("4")
damage = 10
attack_range = 30.0

[node name="AIComponent" type="Node" parent="."]
script = ExtResource("5")
detection_range = 150.0
attack_range = 35.0

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_2")
